--- a/angular.json
+++ b/angular.json
@@ -64,6 +64,12 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "ssl": true,
+            "sslKey": "./key.pem",
+            "sslCert": "./certificate.pem",
+            "host": "localhost",
+            "port": 4200},
           "configurations": {
             "production": {
               "browserTarget": "videoflix:build:production"
